--- a/AcmeProductManagement/index.html
+++ b/AcmeProductManagement/index.html
@@ -8,11 +8,14 @@
 
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Content/app.css" rel="stylesheet" />
-
+   
     <!-- Library Scripts -->
+    <script src="Scripts/jquery-1.9.1.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-mocks.js"></script>
+    <script src="Scripts/angular-ui-router.js"></script>
+    <script src="Scripts/bootstrap.js"></script>
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
@@ -27,48 +30,32 @@
 </head>
 
 <body ng-app="productManagement">
-    <div class="panel panel-primary">
-        <div class="panel-heading"
-             style="font-size:large">
-            Product
-            List
-        </div>
+    <nav class ="navbar navbar-inverse">
+        <div class="container">
+            <a class="navbar-brand"
+               ui-sref="home">Acme Product Management</a>
+            <div class="navbar-header">
+                <button type="button"
+                        class="navbar-toggle"
+                        data-toggle="collapse"
+                        data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle Navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a ui-sref="productList">Product List</a></li>
+                    <li><a ui-sref="productEdit({productId:0}) "><i class="glyphicon glyphicon-plus"></i></a>Add Product</li>
+                </ul>
+            </div>
 
-        <div class="panel-body">
-            <table class="table" ng-controller="ProductListCtrl as vm">
-
-                <thead>
-                    <tr>
-                        <td>
-                            <button type="button"
-                                    class="btn btn-primary"
-                                    ng-click="vm.toggleImage()">
-                                {{vm.showImage ? "Hide" : "Show"}} Image
-                            </button>
-                        </td>
-                        <td>Product</td>
-                        <td>Code</td>
-                        <td>Available</td>
-                        <td>Price</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="product in vm.products">
-                        <td>
-                            <img ng-if="vm.showImage"
-                                 ng-src="{{product.imageUrl}}"
-                                 style="width:50px;margin:2px"
-                                 title="{{product.productName}}">
-                        </td>
-                        <td>{{ product.productName}}</td>
-                        <td>{{ product.productCode }}</td>
-                        <td>{{ product.releaseDate }}</td>
-                        <td>{{ product.price | currency }}</td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
+    </nav>
+    <div class="container">
+        <div ui-view></div>
     </div>
 </body>
-
 </html>
