Routing for Edit Product

--- a/AcmeProductManagement/index.html
+++ b/AcmeProductManagement/index.html
@@ -24,9 +24,11 @@
     <script src="common/services/comon.services.js"></script>
     <script src="common/services/productResource.js"></script>
     <script src="common/services/productResourceMock.js"></script>
-
+    
     <!-- Product Controllers -->
     <script src="app/products/productListCtrl.js"></script>
+    <script src="app/products/productDetailCtrl.js"></script>
+
 </head>
 
 <body ng-app="productManagement">
