--- a/AcmeProductManagement/app/products/productListView.html
+++ b/AcmeProductManagement/app/products/productListView.html
@@ -31,10 +31,20 @@
                              style="width:50px;margin:2px"
                              title="{{product.productName}}">
                     </td>
-                    <td>{{ product.productName}}</td>
+                    <td>
+                        <a ui-sref="productDetail({productId:product.productId})">
+                           {{ product.productName}}</a>
+                    </td>
                     <td>{{ product.productCode }}</td>
                     <td>{{ product.releaseDate }}</td>
                     <td>{{ product.price | currency }}</td>
+                    <td>
+                        <a class="btn btn-primary"
+                            ui-sref="productEdit.info({productId: vm.product.productId})"
+                           style="width:80px;margin-left:10px">                           
+                            Edit
+                        </a>
+                    </td>
                 </tr>
             </tbody>
         </table>
