Added edit feature for product details

--- a/AcmeProductManagement/app/products/productListView.html
+++ b/AcmeProductManagement/app/products/productListView.html
@@ -32,16 +32,16 @@
                              title="{{product.productName}}">
                     </td>
                     <td>
-                        <a ui-sref="productDetail({productId:product.productId})">
-                           {{ product.productName}}</a>
+                        <a ui-sref="productDetail({productId: product.productId})">
+                            {{ product.productName}}
+                        </a>
                     </td>
                     <td>{{ product.productCode }}</td>
                     <td>{{ product.releaseDate }}</td>
                     <td>{{ product.price | currency }}</td>
                     <td>
                         <a class="btn btn-primary"
-                            ui-sref="productEdit.info({productId: vm.product.productId})"
-                           style="width:80px;margin-left:10px">                           
+                           ui-sref="productEdit.info({productId: product.productId})">
                             Edit
                         </a>
                     </td>
